--- a/src/css/listitem.css
+++ b/src/css/listitem.css
@@ -40,3 +40,21 @@
   background-image: url("../assets/background_gradient.png");
   background-repeat: no-repeat;
 }
+
+@media (max-width: 310px) {
+  .overlay {
+    top: 25px;
+  }
+}
+
+  @media (min-width: 550px) {
+    .nameText {
+      font-size: 20px;
+      
+    }
+
+    .categoryText {
+      font-size: 15px;
+    }
+  }
+
