--- a/src/css/restaurantlist.css
+++ b/src/css/restaurantlist.css
@@ -3,11 +3,32 @@
 }
 
 .scrollWindow {
-  position: fixed;
-  top: 65px;
+  padding-top: 65px;
   left: 0;
   right: 0;
   bottom: 0;
-  overflow-y: scroll;
-  z-index:-1;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-y: auto;
+  z-index: -1;
+}
+
+@media (min-width: 550px) {
+  .scrollWindow {
+    width: 50%;
+    left: 50%;
+    float: right;
+    max-width: 512px;
+  }
+  .loadingWindow {
+    width: 50%;
+  }
+}
+@media (min-width: 1030px) {
+  .scrollWindow {
+    overflow-y: scroll;
+    max-height: 100%;
+    height: 90vh;
+  }
+
 }
