--- a/src/css/restaurantlist.css
+++ b/src/css/restaurantlist.css
@@ -22,9 +22,8 @@
     overflow-y: scroll;
     max-height: 100%;
     height: 100vh;
-    
   }
-  .loadingWindow {
-    width: 50%;
+  .sLoadIcon {
+    margin-top: 15%;
   }
 }
